--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -63,10 +63,10 @@
 					</md-button>
 				</div>
 				<div flex="50">
-				<md-icon ng-click="navigation_panel = false" style="color: {{base_hue_lightest.value}}; opacity: .54; position: absolute; top: 16px; right: 32px; z-index: 5; cursor: pointer;">close</md-icon>
+				<md-icon ng-click="navigation_panel = false" style="color: {{base_hue_lightest.value}}; position: absolute; top: 16px; right: 32px; z-index: 5; cursor: pointer;">close</md-icon>
 				</div>
 				<div flex="100" layout="row" layout-align="start center" layout-margin>
-					<h2 style="color: {{base_hue_lightest.value}}; opacity: .54;" layout-padding>
+					<h2 style="color: {{base_hue_lightest.value}};" layout-padding>
 						{{menu_title}}
 					</h2>
 				</div>
@@ -90,56 +90,56 @@
 						<md-tab label="Contact Info">
 							<md-content class="md-padding">
 								<md-list-item class="md-2-line">
-									<md-icon style="color: {{base_hue_lightest.value}}; opacity: .54;">phone</md-icon>
+									<md-icon style="color: {{base_hue_lightest.value}};">phone</md-icon>
 									<div class="md-list-item-text md-offset">
-										<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">817-469-1671</h3>
-										<p style="color: {{base_hue_lightest.value}}; opacity: .54;">Office</p>
+										<h3 style="color: {{base_hue_lightest.value}};">817-469-1671</h3>
+										<p style="color: {{base_hue_lightest.value}};">Office</p>
 									</div>
 								</md-list-item>
 								<md-divider></md-divider>
 								<md-list-item class="md-2-line">
-									<md-icon style="color: {{base_hue_lightest.value}}; opacity: .54;">phone</md-icon>
+									<md-icon style="color: {{base_hue_lightest.value}};">phone</md-icon>
 									<div class="md-list-item-text md-offset">
-										<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">817-274-8757</h3>
-										<p style="color: {{base_hue_lightest.value}}; opacity: .54;">Fax</p>
+										<h3 style="color: {{base_hue_lightest.value}};">817-274-8757</h3>
+										<p style="color: {{base_hue_lightest.value}};">Fax</p>
 									</div>
 								</md-list-item>
 								<md-divider></md-divider>
 								<md-list-item class="md-2-line">
-									<md-icon style="color: {{base_hue_lightest.value}}; opacity: .54;">pin_drop</md-icon>
+									<md-icon style="color: {{base_hue_lightest.value}};">pin_drop</md-icon>
 									<div class="md-list-item-text md-offset">
-										<h3 style="color: {{base_hue_lightest.value}}; opacity: .54;">519 E. Border Street<br>Arlington, TX 76010</h3>
+										<h3 style="color: {{base_hue_lightest.value}};">519 E. Border Street<br>Arlington, TX 76010</h3>
 									</div>
 								</md-list-item>
 							</md-content>
 						</md-tab>
 						<md-tab label="Hours">
 							<md-content class="md-padding">
-								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
 								Sunday <p class="md-secondary">Closed</p>
 								</md-list-item>
 								<md-divider></md-divider>
-								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
 								Monday <p class="md-secondary">7:30AM - 5:00PM</p>
 								</md-list-item>
 								<md-divider></md-divider>
-								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
 								Tuesday <p class="md-secondary">7:30AM - 5:00PM</p>
 								</md-list-item>
 								<md-divider></md-divider>
-								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
 								Wednesday <p class="md-secondary">7:30AM - 5:00PM</p>
 								</md-list-item>
 								<md-divider></md-divider>
-								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
 								Thursday <p class="md-secondary">7:30AM - 5:00PM</p>
 								</md-list-item>
 								<md-divider></md-divider>
-								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
 								Friday <p class="md-secondary">7:30AM - 5:00PM</p>
 								</md-list-item>
 								<md-divider></md-divider>
-								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}}; opacity: .54;">
+								<md-list-item class="secondary-button-padding" style="color: {{base_hue_lightest.value}};">
 								Saturday <p class="md-secondary">7:30AM - 5:00PM</p>
 								</md-list-item>
 								<md-divider></md-divider>
