--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -71,15 +71,15 @@
 					</h2>
 				</div>
 				<md-list flex="100">
-					<md-list-item class="navigation item" flex="100" layout-padding>
+					<md-list-item ng-click="null" class="navigation item" flex="100" layout-padding>
 						<a href="/"><p>Navigation Item #1</p></a>
 					</md-list-item>
 					<md-divider></md-divider>
-					<md-list-item class="navigation item" flex="100" layout-padding>
+					<md-list-item ng-click="null" class="navigation item" flex="100" layout-padding>
 						<a href="/"><p>Navigation Item #2</p></a>
 					</md-list-item>
 					<md-divider></md-divider>
-					<md-list-item class="navigation item" flex="100" layout-padding>
+					<md-list-item ng-click="null" class="navigation item" flex="100" layout-padding>
 						<a href="/"><p>Navigation Item #3</p></a>
 					</md-list-item>
 					<md-divider></md-divider>
