--- a/lib/client/app/stylesheets/buttons.css
+++ b/lib/client/app/stylesheets/buttons.css
@@ -13,3 +13,6 @@
 .fling_button_2.opened {bottom: 210px; box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);}
 .mdl-button.fling_button_1 {transition-duration: .34s; bottom: 86px; box-shadow: none;}
 .fling_button_1.opened {bottom: 152px; box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);}
+/* Buttons */
+.raised-button {box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12)!important;}
+/* Buttons */
