--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,14 +27,14 @@
 		<!-- Slideshow -->
 
 		<!-- Services -->
-		<div layout="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px; position: relative;">
+		<div layout="column" layout-gt-sm="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px; position: relative;">
 			<md-card layout="column" layout-align="center center" style="background: {{base_hue_lightest.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						
 
-						<div layout-padding flex="33" class="services container">
+						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
@@ -52,7 +52,7 @@
 						</div>
 
 
-						<div layout-padding flex="33" class="services container">
+						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
@@ -69,7 +69,7 @@
 							</div>
 						</div>
 
-						<div layout-padding flex="33" class="services container">
+						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
 							<div layout-wrap layout="row" layout-align="center center">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
@@ -86,7 +86,7 @@
 							</div>
 						</div>
 
-						<div layout-padding flex="33" class="services container">
+						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
 							<div layout-wrap layout="row" layout-align="center center">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
@@ -103,7 +103,7 @@
 							</div>
 						</div>
 
-						<div layout-padding flex="33" class="services container">
+						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
 							<div layout-wrap layout="row" layout-align="center center">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
