--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -8,13 +8,12 @@
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-        <div class="slideshow-content" style="margin-top: 9%; margin-left: 20%; z-index: 1;" flex>
+        <div class="slideshow-content" style="z-index: 1;" flex>
         	<div style="position: relative; max-width: 468px; height: 400px;" layout="row" layout-align="center center" flex>
 	        	<div class="left-bar bar" style="position: absolute; top: 0; left:-4px; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
-	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px; line-height: 64px; margin: 0; text-shadow: 1px 1.5px rgba(10,10,10,0.4)">We Aspire To <span style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" blink-cursor="true" ng-attr-text="valueStatements"></span></h1>
-	                    <p style="color: {{base_hue_lightest.value}}; font-size: 16px;">Helping Reshape North Texas Into America's Greatest Metropolitan Area!</p>
+	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px; line-height: 64px; margin: 0; text-shadow: 1px 1.5px rgba(10,10,10,0.4)">ee strive to <span style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" blink-cursor="true" ng-attr-text="valueStatements"></span></h1>
 	                </div>
 	            </div>
 	            <div class="right-bar bar" style="position: absolute; top: 20%; right: -4px; height: 80%; width: 4px;"></div>
