--- a/lib/client/app/stylesheets/slideshow.css
+++ b/lib/client/app/stylesheets/slideshow.css
@@ -8,17 +8,6 @@
 .slide--display {position: absolute; top: 0; height: 100%!important; margin: 0!important; box-sizing: border-box; padding: 0!important; left: 0; top: 0;}
 .slide-hide-override {display: none!important;}
 
-
-/*.video-overlay {
-  position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-  opacity: 0.5;
-  bottom: 0;
-  background-color: #fafafa;
-  background-image: url(https://cdnjs.cloudflare.com/ajax/libs/vegas/2.3.1/overlays/03.png);
-  z-index: 1;
-}*/
-
-
 #slideshow-overlay {
     background: -webkit-linear-gradient(rgba(66,66,66, 0.7), transparent); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(rgba(66,66,66, 0.7), transparent); /* For Opera 11.1 to 12.0 */
@@ -28,7 +17,12 @@
 }
 
 
-.slideshow-content {position: absolute; left: 0; top: 0;}
+.slideshow-content {position: absolute; left: 0; top: 0; margin-top: 9%; margin-left: 20%;}
+@media screen and (max-width: 840px) {
+  .slideshow-content {margin-top: 0; margin-left: 0;}
+  .bar {display: none;}
+}
+
 .show-content {
 	position: absolute;
 	opacity: 0;
