--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -175,14 +175,14 @@
 		<!-- Map With Contact Form Overlay -->
 
 		<!-- Footer -->
-		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}; overflow: hidden; position: relative;">
+		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}; overflow: hidden; position: relative; z-index: 2">
 			<div class="footer-content-top" layout="column" layout-gt-sm="row" layout-padding flex>
 				<div layout="column" layout-padding layout-align="center center" flex="100" flex-gt-sm="33">
 					<div>
-						<img src="media/logo-full-white.png" style="max-height: 120px;">
+						<img class="footer logo" src="media/logo-full-white.png" style="max-height: 120px;">
 					</div>
 				</div>
-				<div layout="row" flex="100" flex-gt-sm="66" layout-align="center center">
+				<div laout="column" layout-gt-sm="row" flex="100" flex-gt-sm="66" layout-align="center center">
 					<div layout-padding flex="100" flex-gt-sm="33">
 						<md-list>
 							<md-list-item>
@@ -235,7 +235,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer-content-bottom" layout="column" layout-gt-sm="row" layout-align="start center" layout-padding flex>
+			<div class="footer-content-bottom" layout="column" layout-gt-sm="row" layout-align="start center" layout-padding flex style="z-index: 2">
 				<span flex="30"></span>
 				<div layout-padding flex="70">
 					<div flex layout="row" layout-align="end center">
@@ -303,7 +303,7 @@
 					</div>
 				</div>
 			</div>
-			<img src="media/pexels-photo-859892.jpeg" style="position: absolute; top: 0; left: 0; opacity: .1; min-height: 100%; min-width: 100%; z-index: 1">
+			<img src="media/pexels-photo-859892.jpeg" style="position: absolute; top: 0; left: 0; opacity: .1; min-height: 100%; min-width: 100%; z-index: 1; max-width: 500%;">
 		</div>
 		<!-- Footer -->
 
