--- a/lib/client/app/stylesheets/footer.css
+++ b/lib/client/app/stylesheets/footer.css
@@ -1,3 +1,7 @@
 .footer-content-top {width: 100%;}
 .footer-content-bottom {width: 100%;}
 .footer-container {width: 100%;}
+.footer.logo {max-width: 120px;}
+@media screen and (max-width: 840px) {
+    .footer.logo {max-width: 85px;}
+}
