--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -15,7 +15,7 @@
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
 		<!-- messaging notification -->
-		<div layout="row" ng-init="show_notification = true" ng-hide="show_notification == false" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 3">
+		<!-- <div layout="row" ng-init="show_notification = true" ng-hide="show_notification == false" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 3">
 			<p style="color: {{base_hue_lightest.value}}; font-size: 14px; padding: 0 0 0 16px;">Click Here To Connect With Us!</p><span flex></span>
 			<md-button class="md-icon-button" ng-click="show_notification = false" aria-label="More">
 				<md-icon style="color: {{base_hue_lightest.value}}">close</md-icon>
@@ -23,7 +23,7 @@
 		</div>
 		<md-button ng-click="show_notification = true" style="background-color: {{primary_hue_normal.value}}; position: fixed; right: 24px; bottom: 48px;" class="md-fab" aria-label="More">
 			<md-icon style="color: {{base_hue_lightest.value}}">mail</md-icon>
-		</md-button>
+		</md-button> -->
 		<!-- messaging notification -->
 
 		<!-- Slideshow -->
@@ -175,8 +175,8 @@
 		<!-- Map With Contact Form Overlay -->
 
 		<!-- Footer -->
-		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}; overflow: hidden; position: relative; z-index: 2">
-			<div class="footer-content-top" layout="column" layout-gt-sm="row" layout-padding flex>
+		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}; overflow: hidden; position: relative;">
+			<div class="footer-content-top" layout="column" layout-gt-sm="row" layout-padding flex style="z-index: 2">
 				<div layout="column" layout-padding layout-align="center center" flex="100" flex-gt-sm="33">
 					<div>
 						<img class="footer logo" src="media/logo-full-white.png" style="max-height: 120px;">
@@ -216,22 +216,20 @@
 						</md-list>
 					</div>
 					<div layout-padding flex="100" flex-gt-sm="33">
-						<div layout="row" layout-padding layout-align="start center">
-							<md-list>
-								<md-list-item>
-									<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
-								</md-list-item>
-								<md-list-item>
-									<p style="color: {{base_hue_lightest.value}};">Facebook</p>
-								</md-list-item>
-								<md-list-item>
-									<p style="color: {{base_hue_lightest.value}};">Twitter</p>
-								</md-list-item>
-								<md-list-item>
-									<p style="color: {{base_hue_lightest.value}};">Pinterest</p>
-								</md-list-item>
-							</md-list>
-						</div>
+						<md-list>
+							<md-list-item>
+								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
+							</md-list-item>
+							<md-list-item>
+								<p style="color: {{base_hue_lightest.value}};">Facebook</p>
+							</md-list-item>
+							<md-list-item>
+								<p style="color: {{base_hue_lightest.value}};">Twitter</p>
+							</md-list-item>
+							<md-list-item>
+								<p style="color: {{base_hue_lightest.value}};">Pinterest</p>
+							</md-list-item>
+						</md-list>
 					</div>
 				</div>
 			</div>
