--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -33,7 +33,7 @@
 		<!-- Services -->
 		<div layout="column" layout-gt-sm="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px; position: relative;">
 			<md-card layout="column" layout-align="center center" style="background: {{base_hue_lightest.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;">
-				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
+				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						
@@ -132,7 +132,7 @@
 		<!-- Item Carousel -->
 		<div class="lw-auto-slider" style="position: relative;">
 			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">MMA IN THE NEWS</h1>
+				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">MMA IN THE NEWS</h1>
 			</div>
 			<div class="lw-auto-slider-container">
 				<md-button class="md-whiteframe-4dp" ng-click="panel_swipe('right')" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
@@ -179,7 +179,7 @@
 			<div class="footer-content-top" layout="column" layout-gt-sm="row" layout-padding flex style="z-index: 2">
 				<div layout="column" layout-padding layout-align="center center" flex="100" flex-gt-sm="33">
 					<div>
-						<img class="footer logo" src="media/logo-full-white.png" style="max-height: 120px;">
+						<img class="footer logo" src="media/logo-full-white.png">
 					</div>
 				</div>
 				<div laout="column" layout-gt-sm="row" flex="100" flex-gt-sm="66" layout-align="center center">
