--- a/lib/client/app/stylesheets/header.css
+++ b/lib/client/app/stylesheets/header.css
@@ -1,6 +1,13 @@
 /* css document */
 .header {z-index: 4!important;}
 .md-subheader-inner {width: 100%;}
+
+.navigation.menu {display: none;}
+@media screen and (max-width: 839px) {
+    .navigation.link {display: none;}
+    .navigation.menu {display: inline-block;}
+} 
+
 .navigation.panel {
     width: 33%; height: 100%; max-height: 100%; 
     overflow-y: auto; position: fixed; top: 0; z-index: 1000;
@@ -23,10 +30,12 @@
         overflow-x: hidden;
     }
 }
+
 .navigation.widget md-grid-list md-grid-tile md-grid-tile-footer {transition: all .2s ease-in-out;}
 .navigation.widget md-grid-list md-grid-tile md-grid-tile-footer.active {height: 100%; background: rgba(27, 94, 32, .8);}
 .navigation.widget md-grid-list md-grid-tile md-grid-tile-footer md-icon {transition: opacity .2s ease-in-out; opacity: 0; transition-delay: .2s;}
 .navigation.widget md-grid-list md-grid-tile md-grid-tile-footer.active md-icon {opacity: 1;}
+
 .navigation.social {
     position: fixed; height: 48px; bottom: 0; width: 33%;
 }
