--- a/lib/client/app/stylesheets/slideshow.css
+++ b/lib/client/app/stylesheets/slideshow.css
@@ -19,7 +19,7 @@
 
 .slideshow-content {position: absolute; left: 0; top: 0; margin-top: 9%; margin-left: 20%;}
 @media screen and (max-width: 840px) {
-  .slideshow-content {margin-top: 0; margin-left: 0;}
+  .slideshow-content {margin-top: 64px; margin-left: 0;}
   .bar {display: none;}
 }
 
