--- a/lib/client/app/stylesheets/text.css
+++ b/lib/client/app/stylesheets/text.css
@@ -6,9 +6,11 @@ a, div, button{letter-spacing: 0em!important; font-family: 'Roboto', sans-serif;
 
 .type.simulated {font-size: 56px;}
 .type.heading {font-size: 32px;}
+.type.heading.footer {font-size: 18px;}
 @media screen and (max-width: 840px) {
-    .type.simulated {font-size: 48px;}
+    .type.simulated {font-size: 42px;}
     .type.heading {font-size: 24px;}
+    .type.heading.footer {font-size: 16px;}
 }
 
 
