--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -31,278 +31,19 @@
 		<!-- Slideshow -->
 
 		<!-- Services -->
-		<div layout="column" layout-gt-sm="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px; position: relative;">
-			<md-card layout="column" layout-align="center center" style="background: {{base_hue_lightest.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
-				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
-					<div layout-wrap layout="row" layout-align="start center">
-						
-
-						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
-							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
-								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
-										<md-card-header>
-											<md-card-header-text>
-												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/005-compass.svg">
-												</md-icon>
-												<br><br>
-												<span class="md-title">CIVIL ENGINEERING</span>
-											</md-card-header-text>
-										</md-card-header>
-									</md-card>
-								</div>
-							</div>
-						</div>
-
-
-						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
-							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
-								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
-										<md-card-header>
-											<md-card-header-text>
-												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/003-plant.svg">
-												</md-icon>
-												<br><br>
-												<span class="md-title">LANDSCAPE ARCHITECTURE</span>
-											</md-card-header-text>
-										</md-card-header>
-									</md-card>
-								</div>
-							</div>
-						</div>
-
-						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
-							<div layout-wrap layout="row" layout-align="center center">
-								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
-										<md-card-header>
-											<md-card-header-text>
-												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/004-whiteboard.svg">
-												</md-icon>
-												<br><br>
-												<span class="md-title">PLANNING</span>
-											</md-card-header-text>
-										</md-card-header>
-									</md-card>
-								</div>
-							</div>
-						</div>
-
-						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
-							<div layout-wrap layout="row" layout-align="center center">
-								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
-										<md-card-header>
-											<md-card-header-text>
-												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/002-tripod.svg">
-												</md-icon>
-												<br><br>
-												<span class="md-title">SURVEYING</span>
-											</md-card-header-text>
-										</md-card-header>
-									</md-card>
-								</div>
-							</div>
-						</div>
-
-						<div layout-padding flex="100" flex-gt-sm="33" class="services container">
-							<div layout-wrap layout="row" layout-align="center center">
-								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%; text-align: center;" class="service">
-										<md-card-header>
-											<md-card-header-text>
-												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/001-travel.svg">
-												</md-icon>
-												<br><br>
-												<span class="md-title">GIS</span>
-											</md-card-header-text>
-										</md-card-header>
-									</md-card>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</md-card>
-		</div>
+		<div ng-include src="'application/landing/partials/section_1.html'"></div>
 		<!-- Services -->
 
 		<!-- Item Carousel -->
-		<div class="lw-auto-slider" style="position: relative;">
-			<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-				<h1 class="type heading" style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">MMA IN THE NEWS</h1>
-			</div>
-			<div class="lw-auto-slider-container">
-				<md-button class="md-whiteframe-4dp" ng-click="panel_swipe('right')" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
-					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_left</md-icon>
-				</md-button>
-				<md-button class="md-whiteframe-4dp" ng-click="panel_swipe('left')" style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; right: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
-					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
-				</md-button>
-				<div class="news panel" style="left: 0; width: {{scroll_bar_aware_window_width * news_post_width}}px; transform:translate({{amount_to_slide}},0);" ng-swipe-left="panel_swipe('left')" ng-swipe-right="panel_swipe('right')">
-					<div layout-padding class="index-news-post" ng-repeat="item in ['one', 'two', 'three', 'four']" ng-class="{'one-third': window_width >= 960, 'one-half': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
-						<md-card layout-padding style="background: transparent; height: 100%; padding: 0;">
-							<div class="post-image">
-								<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
-							</div>
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ENTERTAINMENT DISTRICTS</span>
-								</md-card-header-text>
-							</md-card-header>
-							<md-card-content>
-								<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-							</md-card-content>
-						</md-card>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div ng-include src="'application/landing/partials/section_2.html'"></div>
 		<!-- Item Carousel -->
 
 		<!-- Map With Contact Form Overlay -->
-		<div layout="row" layout-align="center center" layout-wrap>
-			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2;">
-				<div layout-wrap layout="row" layout-align="start center" flex>
-					<div flex style="margin-bottom: -5px;">
-						<iframe src="https://snazzymaps.com/embed/64899" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div ng-include src="'application/landing/partials/section_3.html'"></div>
 		<!-- Map With Contact Form Overlay -->
 
 		<!-- Footer -->
-		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}; overflow: hidden; position: relative;">
-			<div class="footer-content-top" layout="column" layout-gt-sm="row" layout-padding flex style="z-index: 2">
-				<div layout="column" layout-padding layout-align="center center" flex="100" flex-gt-sm="33">
-					<div>
-						<img class="footer logo" src="media/logo-full-white.png">
-					</div>
-				</div>
-				<div layout="column" layout-sm="row" layout-gt-sm="row" flex="100" flex-gt-sm="66" layout-align="center start" layout-align-sm="center center" layout-align-gt-sm="center center" layout-wrap>
-					<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
-						<md-list>
-							<md-list-item>
-								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Civil Engineering</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Surveying</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Landscape Architecture</p>
-							</md-list-item>
-						</md-list>
-					</div>
-					<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
-						<md-list>
-							<md-list-item>
-								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Careers</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Services</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Projects</p>
-							</md-list-item>
-						</md-list>
-					</div>
-					<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
-						<md-list>
-							<md-list-item>
-								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Facebook</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Twitter</p>
-							</md-list-item>
-							<md-list-item>
-								<p style="color: {{base_hue_lightest.value}};">Pinterest</p>
-							</md-list-item>
-						</md-list>
-					</div>
-				</div>
-			</div>
-			<div class="footer-content-bottom" layout="column" layout-gt-sm="row" layout-align="start center" layout-padding flex style="z-index: 2">
-				<span flex="30"></span>
-				<div layout-padding flex="100" flex-gt-sm="70">
-					<div flex layout="row" layout-align="end center" layout-wrap>
-						<div flex="50" flex-gt-sm="25">
-							<p style="color: {{base_hue_lightest.value}};">{{settings.data.site_name}} &#169; {{year}}</p>
-						</div>
-						<div flex="50" flex-gt-sm="25">
-							<p style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p>
-						</div>
-						<div flex="75" flex-gt-sm="25">
-							<h1 class="type heading footer" style="color: {{base_hue_lightest.value}};">Superpowered By Lightweight</h1>
-						</div>
-						<md-menu>
-                            <md-button aria-label="Lightweight menu" class="md-icon-button" ng-click="openMenu($mdMenu, $event)">
-                                <md-icon md-menu-origin style="color: {{base_hue_lightest.value}}">settings</md-icon>
-                            </md-button>
-                            <md-menu-content width="4">
-                                <md-menu-item ng-show="user">
-                                    <md-button ng-click="open_edit_configuration()">
-                                        <md-icon>settings</md-icon>
-                                        App Settings
-                                    </md-button>
-                                </md-menu-item>
-                                <md-menu-item ng-show="user">
-                                    <md-button ng-click="openUserVault()">
-                                        <md-icon>recent_actors</md-icon>
-                                        User Vault
-                                    </md-button>
-                                </md-menu-item>
-                                <md-menu-item ng-show="user">
-                                    <md-button ng-click="openMediaVault(null)">
-                                        <md-icon>photo_library</md-icon>
-                                        Media Vault
-                                    </md-button>
-                                </md-menu-item>
-                                <md-menu-item ng-show="user">
-                                    <md-button disabled ng-click="null">
-                                        <md-icon>assignment</md-icon>
-                                        Task Runner
-                                    </md-button>
-                                </md-menu-item>
-                                <md-menu-divider ng-show="user"></md-menu-divider>
-                                <a href="/login">
-                                    <md-menu-item ng-show="!user">
-                                        <md-button>
-                                            <md-icon>lock</md-icon>
-                                            Log In
-                                        </md-button>
-                                    </md-menu-item>
-                                </a>
-                                <md-menu-item ng-show="user">
-                                    <md-button ng-click="auth.$signOut()">
-                                        <md-icon>lock_open</md-icon>
-                                        Log Out
-                                    </md-button>
-                                </md-menu-item>
-                                <md-menu-item ng-show="user">
-                                    <md-button ng-click="openMyVault()">
-                                        <md-icon>person</md-icon>
-                                        My Vault
-                                    </md-button>
-                                </md-menu-item>
-                            </md-menu-content>
-                        </md-menu>
-					</div>
-				</div>
-			</div>
-			<img src="media/pexels-photo-859892.jpeg" style="position: absolute; top: 0; left: 0; opacity: .1; min-height: 100%; min-width: 100%; z-index: 1; max-width: 500%;">
-		</div>
+		<div ng-include src="'application/partials/footer.html'"></div>
 		<!-- Footer -->
 
     </section>
