--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -56,7 +56,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer-content-bottom" layout="column" layout-gt-sm="row" layout-align="start center" layout-padding flex style="z-index: 2">
+	<div class="footer-content-bottom" layout="row" layout-align="start center" layout-padding flex style="z-index: 2">
 		<span flex="30"></span>
 		<div layout-padding flex="100" flex-gt-sm="70">
 			<div flex layout="row" layout-align="end center" layout-wrap>
@@ -67,8 +67,8 @@
 					<p style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p>
 				</div>
 				<div flex="75" flex-sm="25" flex-gt-sm="25">
-					<h1 class="type heading footer" style="color: {{base_hue_lightest.value}};">Superpowered By Lightweight</h1>
-					<md-menu>
+					<h1 class="type heading footer" style="display: inline-block; color: {{base_hue_lightest.value}};">Superpowered By Lightweight</h1>
+					<md-menu style="display: inline-block;">
 	                    <md-button aria-label="Lightweight menu" class="md-icon-button" ng-click="openMenu($mdMenu, $event)">
 	                        <md-icon md-menu-origin style="color: {{base_hue_lightest.value}}">settings</md-icon>
 	                    </md-button>
