--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -56,7 +56,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer-content-bottom" layout="row" layout-align="start center" layout-padding flex style="z-index: 2">
+	<div class="footer-content-bottom" layout="row" layout-align="start center" layout-padding flex layout-wrap style="z-index: 2">
 		<span flex="30"></span>
 		<div layout-padding flex="100" flex-gt-sm="70">
 			<div flex layout="row" layout-align="end center" layout-wrap>
