--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -7,10 +7,11 @@
 		</md-subheader>
 		<!-- header -->
 
-		<div>
+		<div layout="row" layout-align="center center">
 			<div style="text-align: center;">
 				<img src="{{settings.logo}}" ng-cloak="true">
 			</div>
+			<div flex="60">
 			<form name="login" autocomplete="nope">
 				<md-content>
 					<md-list-item>
@@ -46,6 +47,6 @@
 				</md-content>
 			</form>
 		</div>
-		
+
 	</section>
 </md-content>
