--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -79,7 +79,7 @@
 	                                App Settings
 	                            </md-button>
 	                        </md-menu-item>
-	                        <md-menu-item>
+	                        <md-menu-item ng-show="user">
 	                            <md-button ng-click="openUserVault()">
 	                                <md-icon>recent_actors</md-icon>
 	                                User Vault
