temporary adjustment to header
Prepping site to launch as a splash page

--- a/lib/client/app/application/partials/header.html
+++ b/lib/client/app/application/partials/header.html
@@ -1,12 +1,12 @@
 <!-- sticky header -->
 <div layout-align="center center" layout="row" layout flex>
 	<!-- Logo -->
-	<div flex="75" flex-gt-sm="25" layout-align="start center" layout-align-gt-sm="center center" layout="row">
+	<div flex="100" flex-gt-sm="25" layout-align="center center" layout-align-gt-sm="center center" layout="row">
 		<img src="media/logo.png" style="max-height: 64px;">
 	</div>
 	<!-- Logo -->
 	<!-- Navigation Items -->
-	<div flex="25" flex-gt-sm="75" layout-align="end center" layout="row" ng-init="navigation_panel = false">
+	<!-- <div flex="25" flex-gt-sm="75" layout-align="end center" layout="row" ng-init="navigation_panel = false">
 		<md-button class="md-icon-button navigation menu" style="color: {{base_hue_darkest.value}};" ng-click="navigation_panel = true">
 			<md-icon style="color: {{base_hue_darkest.value}}">menu</md-icon>
 		</md-button>
@@ -38,7 +38,7 @@
 			<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 			CONTACT US
 		</md-button>
-	</div>
+	</div> -->
 	<!-- Navigation Items -->
 </div>
 <!-- sticky header -->
