--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -9,48 +9,48 @@
 			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
 				<md-list>
 					<md-list-item>
-						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
+						<a href="/"><p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p></a>
 					</md-list-item>
 					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Civil Engineering</p>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Civil Engineering</p></a>
 					</md-list-item>
 					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Surveying</p>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Surveying</p></a>
 					</md-list-item>
 					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Landscape Architecture</p>
-					</md-list-item>
-				</md-list>
-			</div>
-			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
-				<md-list>
-					<md-list-item>
-						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p>
-					</md-list-item>
-					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Careers</p>
-					</md-list-item>
-					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Services</p>
-					</md-list-item>
-					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Projects</p>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Landscape Architecture</p></a>
 					</md-list-item>
 				</md-list>
 			</div>
 			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
 				<md-list>
 					<md-list-item>
-						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
+						<a href="/"><p style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p></a>
 					</md-list-item>
 					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Facebook</p>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Careers</p></a>
 					</md-list-item>
 					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Twitter</p>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Services</p></a>
 					</md-list-item>
 					<md-list-item>
-						<p style="color: {{base_hue_lightest.value}};">Pinterest</p>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Projects</p></a>
+					</md-list-item>
+				</md-list>
+			</div>
+			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
+				<md-list>
+					<md-list-item>
+						<a href="/"><p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p></a>
+					</md-list-item>
+					<md-list-item>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Facebook</p></a>
+					</md-list-item>
+					<md-list-item>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Twitter</p></a>
+					</md-list-item>
+					<md-list-item>
+						<a href="/"><p style="color: {{base_hue_lightest.value}};">Pinterest</p></a>
 					</md-list-item>
 				</md-list>
 			</div>
@@ -64,7 +64,7 @@
 					<p style="color: {{base_hue_lightest.value}};">{{settings.data.site_name}} &#169; {{year}}</p>
 				</div>
 				<div flex="50" flex-sm="25" flex-gt-sm="25">
-					<p style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p>
+					<a href="/"><p style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p></a>
 				</div>
 				<div flex="100" flex-sm="50" flex-gt-sm="50">
 					<h1 class="type heading footer" style="display: inline-block; color: {{base_hue_lightest.value}};">Superpowered By Lightweight</h1>
