adjusting login form
login form width and form field colors

--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -11,7 +11,7 @@
 			<div style="text-align: center;">
 				<img src="{{settings.logo}}" ng-cloak="true">
 			</div>
-			<div flex="60">
+			<div flex="80" flex-sm="60" flex-gt-sm="40">
 			<form name="login" autocomplete="nope">
 				<md-content>
 					<md-list-item>
