--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -9,7 +9,7 @@
 			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
 				<md-list>
 					<md-list-item>
-						<a href="/"><p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p></a>
+						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p><
 					</md-list-item>
 					<md-list-item>
 						<a href="/"><p style="color: {{base_hue_lightest.value}};">Civil Engineering</p></a>
@@ -25,7 +25,7 @@
 			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
 				<md-list>
 					<md-list-item>
-						<a href="/"><p style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p></a>
+						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p>
 					</md-list-item>
 					<md-list-item>
 						<a href="/"><p style="color: {{base_hue_lightest.value}};">Careers</p></a>
@@ -41,7 +41,7 @@
 			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
 				<md-list>
 					<md-list-item>
-						<a href="/"><p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p></a>
+						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
 					</md-list-item>
 					<md-list-item>
 						<a href="/"><p style="color: {{base_hue_lightest.value}};">Facebook</p></a>
