login form adjustments

--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -1,3 +1,7 @@
+<style type="text/css">
+	md-input-container:not(.md-input-invalid).md-input-focused .md-input {border-color: {{primary_hue_text__normal.value}};}
+</style>
+
 <md-content class="page" style="height: {{window_height}}px">
 	<section ng-cloak>
 
