--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -1,5 +1,6 @@
 <style type="text/css">
 	md-input-container:not(.md-input-invalid).md-input-focused .md-input {border-color: {{primary_hue_text__normal.value}};}
+	md-input-container:not(.md-input-invalid).md-input-focused label {color: {{primary_hue_text__normal.value}};}
 </style>
 
 <md-content class="page" style="height: {{window_height}}px">
