--- a/lib/client/app/stylesheets/index.css
+++ b/lib/client/app/stylesheets/index.css
@@ -14,4 +14,6 @@
 	.lw-auto-slider {height: 600px;}
   	.index-news-post {max-width: 350px!important;}
 }
+
+.index-form {position: absolute; right: 32px; top: 16px; min-width: 400px;}
 /* index-slider */
