--- a/lib/client/app/stylesheets/index.css
+++ b/lib/client/app/stylesheets/index.css
@@ -15,5 +15,6 @@
   	.index-news-post {max-width: 350px!important;}
 }
 
-.index-form {position: absolute; right: 32px; top: 16px; min-width: 400px;}
+.index-form {position: fixed; right: 32px; top: 16px; min-width: 400px;}
+.index-form md-input-container {margin: 8px 0!important;}
 /* index-slider */
