--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -61,7 +61,7 @@
 		<div layout-padding flex="100" flex-gt-sm="70">
 			<div flex layout="row" layout-align="end center" layout-wrap>
 				<div flex="50" flex-sm="25" flex-gt-sm="25">
-					<p style="color: {{base_hue_lightest.value}};">{{settings.data.site_name}} &#169; {{year}}</p>
+					<p style="color: {{base_hue_lightest.value}};">{{settings.data.site_name}}Mycoskie McInnis &amp; Associates &#169; {{year}}</p>
 				</div>
 				<div flex="50" flex-sm="25" flex-gt-sm="25">
 					<a href="/"><p style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p></a>
