bar removal slideshow

--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -10,13 +10,13 @@
 		</video>
         <div class="slideshow-content" style="z-index: 1;" flex>
         	<div style="position: relative; max-width: 468px; height: 300px;" layout="row" layout-align="center center" flex>
-	        	<div class="left-bar bar" style="position: absolute; top: 0; left:-4px; height: 80%; width: 4px;"></div>
+	        	<!-- <div class="left-bar bar" style="position: absolute; top: 0; left:-4px; height: 80%; width: 4px;"></div> -->
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
 	                    <h1 class="type simulated" style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; text-shadow: 1px 1.5px rgba(10,10,10,0.4)">We strive to <span style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" blink-cursor="true" ng-attr-text="valueStatements"></span></h1>
 	                </div>
 	            </div>
-	            <div class="right-bar bar" style="position: absolute; top: 20%; right: -4px; height: 80%; width: 4px;"></div>
+	            <!-- <div class="right-bar bar" style="position: absolute; top: 20%; right: -4px; height: 80%; width: 4px;"></div> -->
             </div>
         </div>
 	</div>
