--- a/lib/client/app/application/pages/announcement/partials/announcement-template.html
+++ b/lib/client/app/application/pages/announcement/partials/announcement-template.html
@@ -1,4 +1,4 @@
-<section flex="100" layout="column" layout-align="start center" class="{{base_hue_lightest.name}}">
+<section class="interior-page" flex="100" layout="column" layout-align="start center" class="{{base_hue_lightest.name}}">
 
 	<!-- header -->
 	<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 5; box-shadow: none; border-bottom: 1px solid #e0e0e0">
@@ -40,14 +40,7 @@
 
 	</div>
 </section>
-<!-- Back Fab -->
-<a 
- class="back-to-top"
- go-back-angular
- ng-attr-style="position: fixed; bottom: 64px; right: 32px; z-index: 100; background-color: {{primary_hue_normal.value}};">
-    <md-icon style="color: {{base_hue_lighter.value}};">arrow_back</md-icon>                
-</a>
-<!-- Back Fab -->
+
 
 <!-- Footer -->
 <div ng-include src="'application/partials/footer.html'"></div>
